--- a/SCSS/_testimonials.scss
+++ b/SCSS/_testimonials.scss
@@ -21,6 +21,7 @@
             margin-left: 15px;
             margin-right: 15px;
             align-items: center;
+            margin-bottom: 15px;
 
             img{
                 width: 240px;
@@ -30,6 +31,7 @@
             }
 
             h2{
+                margin-top: 10px;
                 color: $red;
                 margin-bottom: 10px;
             }
